<resources>
    <string name="app_name">TaskLists</string>
    <string name="action_settings">Settings</string>
    <string name="cancel_task">Cancel</string>
    <string name="edit_task">Edit</string>
    <string name="need_account">You must select an account to continue</string>
    <string name="signed_in_fmt">Signed in</string>
    <string name="loading">Loading</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign out</string>
    <string name="new_task">New task</string>
    <string name="task_name">Task name</string>
    <string name="due">Due to</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="parent_task">Parent task</string>
    <string name="assigned_to">Assigned to</string>
    <string name="save">Save</string>
    <string name="new_group">New group</string>
    <string name="leave_group">Leave group</string>
    <string name="group_name">Group name</string>
    <string name="confirm_leave_group">Leave current group?</string>
    <string name="manage_group_members">Manage group members</string>
    <string name="current_members">Current members</string>
    <string name="other_users">Other users</string>
    <string name="location">Location</string>
    <string name="location_name">Location name</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="manage_group_users">Manage group users</string>
    <string name="manage_group_locations">Manage group locations</string>
    <!--<string name="server_url">https://moetto.duckdns.org/moso/</string>-->
    <string name="remove_task">Remove</string>
    <string name="server_url">http://192.168.1.6:8000/</string>
    <string name="gcm_sender_ID">727690215041</string>
</resources>
