<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/new_task"
        app:titleTextColor="@color/colorAccent"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/task_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor"
            android:id="@+id/newTaskName">
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/due"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.46"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/newTaskDueDate"
                android:hint="@string/date"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.46"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/newTaskDueTime"
                android:hint="@string/time"/>

            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="0.08"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:onClick="clearDateTime"
                android:src="@android:drawable/ic_delete"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"/>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/assigned_to"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spinner_paddingtop"
            android:id="@+id/newTaskAssignedTo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/divider_margintop"
            android:layout_marginBottom="@dimen/divider_marginbottom"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spinner_paddingtop"
            android:id="@+id/newTaskLocation"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/divider_margintop"
            android:layout_marginBottom="@dimen/divider_marginbottom"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/parent_task"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spinner_paddingtop"
            android:id="@+id/newTaskParentTask"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/newtask_savebutton_margintop"
            android:text="@string/save"
            android:onClick="clickSaveButton"/>

    </LinearLayout>
</LinearLayout>